1.2.0b6
    Multisite:
    * FIX: Fixed layout of some dropdown fields in view filters

    Core:
    * FIX: Fixed "make_utf is not defined" error when having custom
           timeperiods defined in WATO

1.2.0b5:
    Core:
    * FIX: handle UTF-8 encoded binary strings correctly (e.g. in host alias)
    * FIX: fix configuration of passive checks via custom_checks
    * Added NOTIFICATIONTYPE to host/service mail bodies

    WATO:
    * Site management: "disabled" only applies to Livestatus now
    * FIX: fix folding problems with dependent host tags
    * FIX: Detecting duplicate tag ids between regular tags and auxtags
    * FIX: Fixed layout problem of "new special rule" button in rule editor
    * FIX: Fixed layout problem on "activate changes" page
    * FIX: Added check if contacts belong to contactgroup before contactgroup deletion
    * FIX: fix site configuration for local site in Multisite environments
    * FIX: "(no not monitor)" setting in distributed WATO now works
    * FIX: Site management: replication setting was lost after re-editing
    * FIX: fixed problems after changing D/WATO-configuration
    * FIX: D/WATO: mark site dirty after host deletion
    * FIX: D/WATO: replicate auth.secret, so that login on one site also
           is valid on the replication slaves
    * FIX: implement locking in order to prevent data corruption on
           concurrent changes
    * FIX: Fixed handling of validation errors in cascading dropdown fields
    * FIX: fix cloning of users
    * Keep track of changes made by other users before activating changes,
      let user confirm this, new permission can be used to prevent a user
      from activating foreign changes.
    * FIX: Allowing german umlauts in users mail addresses
    * Allow list of aux tags to be missing in host tag definitions. This
      makes migration from older version easier.
    * FIX: user management modules can now deal with empty lines in htpasswd