@@ -807,7 +807,10 @@ class html:
             login_text += ')'
         else:
             login_text = _("not logged in")
-        self.write('<table class=header><tr><td width="*" class=heading>%s</td>' % title)
+        self.write('<table class=header><tr><td width="*" class=heading>')
+        self.write('<a href="#" onfocus="if (this.blur) this.blur();" '
+                   'onclick="this.innerHTML=\'%s\'; document.location.reload();">%s</a></td>' % 
+                   (_("Reloading..."), title))
         self.write('<td width=240 class=right>%s &nbsp; <b id=headertime>%s</b>' % 
                    (login_text, time.strftime("%H:%M")))
         self.help_visible = config.load_user_file("help", False)  # cache for later usage
