@@ -98,6 +98,11 @@ body.main table.header td.heading {
     max-width: 100px;
 }
 
+body.main table.header td.heading a,
+body.main table.header td.heading a:hover {
+    text-decoration: none;
+}
+
 body.main table.header td.right {
     text-align: right;
     font-size: 10pt;
