@@ -1,6 +1,7 @@
 1.2.0b6
     Multisite:
     * FIX: Fixed layout of some dropdown fields in view filters
+    * Make heading in each page clickable -> reload page
 
     Core:
     * FIX: Fixed "make_utf is not defined" error when having custom
